HTML - adding class to header, CSS - border + color, top margin of card, solving the header-gap issue

--- a/style.css
+++ b/style.css
@@ -23,14 +23,17 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 4% auto auto auto;
+  margin: 3% auto auto auto;
   overflow: auto;
+}
+
+.card__header {
+  font-size: 0;
 }
 
 .card__image {
   border-radius: 10px 10px 0 0;
   width: 100%;
-  height: 100%;
 }
 
 .card__main {
@@ -65,8 +68,7 @@ body {
 
 .card__link--rules {
   background-color: #1fcca4;
-  border-top: 2px solid #0e7c63;
-  border-bottom: 2px solid #0e7c63;
+  border-bottom: 2px solid #283e50;
 }
 
 .card__link--rules:hover {
